# packbits

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: bitfield_compare.rs
examples/: bit_order.rs  packet.rs
src/: lib.rs
src/pack/: args.rs  attrs.rs  codegen.rs  diagram.rs  generator.rs  layout.rs  mod.rs
tests/: bool_and_bytes.rs  cropping.rs  i64.rs  int_container.rs  msb_lsb.rs  nested.rs  nested_struct.rs  other_types.rs  signed.rs  signed_more.rs  tuple_struct.rs  u128.rs  u64.rs
tests/ui/: bits_too_wide.rs  bits_too_wide.stderr  missing_bits_for_unknown.rs  missing_bits_for_unknown.stderr  not_enough_space.rs  not_enough_space.stderr  skip_zero.rs  skip_zero.stderr  tuple_struct.rs  tuple_struct.stderr  wrong_attr_key.rs  wrong_attr_key.stderr
